JumpScript/tests/baselines/reference/symbolProperty43.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty43.jump(3,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/es6/Symbols/symbolProperty43.jump (1 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        [Symbol.iterator](x: number): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }